[package]
name = "exif-namer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
kamadak-exif = "0.5"
glob = "0.3"
regex = "1.10"
log = "0.4"
log4rs = "1.3"
chrono = { version = "0.4", features = ["alloc", "std", "clock", "now"] }
sha1 = "0.10"
hex = "0.4"
handlebars = "5.1"
handlebars_misc_helpers = { version = "0.16", features = ["string", "uuid", "regex"		] }
serde = "1.0"
serde_json = "1.0"